[package]
name = "workflow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.12"
evmap = "10.0"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
temporal-client = { git = "https://github.com/temporalio/sdk-core.git", rev = "64774d67793694d432ebfd64638c4a806785124c", optional = true }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core.git", rev = "64774d67793694d432ebfd64638c4a806785124c", optional = true }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core.git", rev = "64774d67793694d432ebfd64638c4a806785124c", optional = true }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core.git", rev = "64774d67793694d432ebfd64638c4a806785124c", optional = true }
tokio = "1.0"
tracing = "0.1"
workflow-rs-macros = { path = "../workflow-rs-macros", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
workflow-rs-macros = { path = "../workflow-rs-macros" }
uuid = { version = "1.3", features = ["v7"] }

[features]
default = ["temporal", "macros"]
macros = ["workflow-rs-macros"]
temporal = ["temporal-client", "temporal-sdk", "temporal-sdk-core", "temporal-sdk-core-api"]

[[example]]
name = "temporal"
required-features = ["temporal"]